karxim/static_admin/css/main.css
*{
    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

body{
    max-height: 100%;
}
a{
    color:#78b677;
}

.abs{position: absolute;}
.fixed{position: fixed;}
.rel{position: relative;}

.fleft{
    float:left;
    left:0px;
}
.fright{
    float:right;
    right:0px;
}
.hide{display: none;}
.block{display: block;}
.clear{clear: both;}
.clearL{clear: left;}

.clicker{cursor: pointer;}
.hover:hover{color:#78b677;}

.center{
    text-align: center;
}

input[type="text"], textarea{
    padding:10px;
    border:none;
    border-radius: 3px;
}
textarea{
    min-height: 40px;
}
img.thumbnail{
    max-height: 50px;
    max-width: 50px;
}
img.full{
    max-height: 420px;
    max-width: 420px;
}
img.hover:hover{
    border:1px solid black;
}
button:hover{
    color:#2b2b2b;
}
input[type="checkbox"]{
    width: 15px;
    height: 15px;
    margin-top:4px;
}
.colorB{color:black;}                        /* BLACK */
.backgroundB{background:black}        

.color0{color:white}                        /* WHITE */
.background0{background:white}              

.color1{color:#78b677;}                     /* GREEN */
.background1{background:#78b677;}

.color2{color:#2b2b2b;}                     /* DARK GREY */
.background2{background:#2b2b2b;}

.color3{color:#3A3A3A;}                     /* MEDIUM GREY */
.background3{background: #3A3A3A;}

.color4{color:#5F5F5F;}                     /* LIGHT GREY */
.background4{background: #5F5F5F;}

.color5{color:#E27171;}                     /* RED */
.background5{background: #E27171;}

.bold{font-weight: bold;}
.fs6{font-size: .6em;}
.fs7{font-size: .72em;}
.fs8{font-size: .8em;}
.fs12{font-size: 1.2em;}
.fs14{font-size: 1.4em;}
.fs16{font-size: 1.6em;}
.fs18{font-size: 1.8em;}
.fs20{font-size: 2em;}
.pad0{padding:0px}
.pad5{padding:5px}
.pad10{padding:10px}
.pad15{padding:15px}
.pad20{padding:20px}
.mar0{margin:0px}
.mar5{margin:5px}
.mar10{margin:10px}
.mar15{margin:15px}
.mar20{margin:20px}
.left2{margin-left: 2em}
.left4{margin-left: 4em}
.left6{margin-left: 6em}
.right2{margin-right: 2em}
.right4{margin-right: 4em}
.right6{margin-right: 6em}
.top0{top:0px;}
.top1{top:1.1em;}
.top2{top:2em;}
.top3{top:3em;}
.top4{top:4em;}
.level1{z-index:1}
.level2{z-index:2}
.level3{z-index:3}
.level4{z-index:4}
.level5{z-index:5}

.shadow{
    box-shadow: -2px 2px 20px 1px #000;
}
button{
    border:none;
    background:#78b677;
    color:white;
    padding:10px;
    border-radius: 2px;
    cursor: pointer;
}

#map{
    top:0px; bottom:0px; left:0px;
    width:100%;
}

#menu{
    position:fixed;
    top:0px;right:0;
    z-index:2;
}

#menu .mItem{
    padding:25px;
    font-size:1.4em;
    border-bottom-left-radius:12px;
}
#menu .mItem:hover{
    background: #3A3A3A;
}

.leaflet-popup-content-wrapper,.leaflet-popup-tip{
    background:#3A3A3A;
    color:white;
}
.join{
}

.popupSpace{
    top:0px;
    max-width: 28em;
}

.popup{
    border-radius: 4px;
}

.leaflet-top .leaflet-control{
    margin-right: 215px;
}

.selectTime input[type="text"]{
    height: .8em;
    max-width: 5em;
}

